# BSVibe-Auth

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
auth-app/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vercel.json  vite.config.ts
auth-app/api/: logout.ts  refresh.ts  session.ts  silent-check.ts
auth-app/e2e/: auth.spec.ts
auth-app/functions/.well-known/: jwks.json.ts
auth-app/public/: _redirects  _routes.json
auth-app/src/: App.tsx  index.css
auth-app/src/lib/: redirect.ts  supabase.test.ts  supabase.ts
auth-app/src/pages/: CallbackPage.test.tsx  CallbackPage.tsx  LoginPage.test.tsx  LoginPage.tsx  LogoutPage.tsx  SignupPage.test.tsx  SignupPage.tsx
js/: package.json
python/: README.md  pyproject.toml
python/bsvibe_auth/: __init__.py  bsvibe.py  errors.py  fastapi.py  models.py  provider.py  supabase.py
python/tests/: test_supabase.py
